# swapbytes

./: Cargo.toml  README.md
src/: behaviour.rs  input.rs  main.rs  util.rs
