[package]
name = "swapbytes"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
async-trait = "0.1.81"
futures = "0.3.31"
clap = { version = "4.5.37", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
uuid = { version = "1.16.0", features = ["v4"]}
[dependencies.libp2p]
version = "0.55"
features = ["tokio", "gossipsub", "mdns", "noise", "macros", "tcp", "quic", "yamux", "cbor", "request-response", "rendezvous", "ping", "identify", "kad", "serde"]
